--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./frontend/.env.docker
     ports:
       - "5173:5173"
+    command: npm run dev -- --host 0.0.0.0
 
 volumes:
   data:
